tests/compile-fail/wrong-separator.stderr
error: Arrow => required
 --> tests/compile-fail/wrong-separator.rs:9:9
  |
9 |         "c"
  |         ^^^
